Added bugfix for the search

--- a/web/Search.html
+++ b/web/Search.html
@@ -318,6 +318,7 @@ https://github.com/ShadowItaly/clas-digital/issues/56.close:focus {
 
 .sugg a:hover {
     background-color: #ddd;
+    cursor: pointer;
 }
 
 		</style>
