Maybe fixes issue with not finding multiple hits in one book because of white spaces

--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -606,7 +606,7 @@ function init() {
 
 	parsedUrlParams["query"] = decodeURIComponent(parsedUrlParams["query"]);
 		
-	Server.Get("/searchinbook?scanId=" + scanId + "&query=" + encodeURIComponent(parsedUrlParams["query"])+"&fuzzyness="+encodeURIComponent(parsedUrlParams["fuzzyness"]), function(content) {
+	Server.Get("/searchinbook?scanId=" + scanId + "&query=" + encodeURIComponent(parsedUrlParams["query"].replace(' ','+'))+"&fuzzyness="+encodeURIComponent(parsedUrlParams["fuzzyness"]), function(content) {
 		let searchResults = JSON.parse(content);
 		// temporary needed
 		searchResults.pages = searchResults.books;
