--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -81,6 +81,7 @@ padding-right: 0;
 	height: 100vh;
 	width: 100%;
 	grid-template-columns: 60% 40%;
+	grid-column-gap: 1%;
 	background-color: grey;
 	overflow:hidden;
 }
