--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -96,7 +96,7 @@ padding-right: 0;
 
 .ocrdispstyle {
 	display:block;
-	width: 98%;
+	width: 100%;
 	margin: 0;
 	margin-top: 1rem;
 	padding-right: 0;
@@ -172,6 +172,7 @@ a:active {
     height: 40vh;
     transition-timing-function: ease-in-out;
     transition-duration: 1s;
+    overflow: scroll;
 }
 
 .fuzzysugs {
@@ -792,14 +793,14 @@ function SelectNextHit()
 </head>
 <body>
 	<div class="pageContainer">
-	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height: 100vh;margin-bottom: 0;'> 
+	    <div style='top: 0;display: inline-grid; grid-column: 2 /span 1;height: 100vh;margin-bottom: 0;margin-right: 1rem;'> 
 	
 		<div id="SearchOpts" class="optioncont secondoptioncontlay" style='top: 0;background-color: white;overflow:scroll;'>
 		    
 		    <div style='display:grid;grid-template-columns: 9% 80% 9%;padding: 0;'>
 		    <div id="searchboxstuff" style='grid-column: 1 / span 3;height: 3rem;float:left;'>	
 			<div>
-			<input id='srchbox' style='display:inline-block;min-width:70%;border-radius: 20px;text-align:center;' type='text' placeholder="Next search..." /><button style='display:inline-block;margin-right: 0.5rem;margin-left: 0.5rem;' onclick='doCompleteNewSearch();return true;'>Do search</button>
+			<input id='srchbox' style='display:inline-block;width:80%;border-radius: 20px;text-align:center;' type='text' placeholder="Next search..." /><button style='display:inline-block;margin-right: 0.5rem;margin-left: 0.5rem;' onclick='doCompleteNewSearch();return true;'>Do search</button>
 			</div>
 			<div id='fuzzysuggestions' class='fuzzysugs'>
 					<a>Link one</a>
