--- a/web/GetBooks.html
+++ b/web/GetBooks.html
@@ -108,6 +108,7 @@ padding-right: 0;
 	display: block;
 	font-size: small;
 	background-color: white;
+	margin-right: 1rem;
 	margin-bottom: 4rem;
 	padding: 2.5rem;
 	text-align: justify;
@@ -184,17 +185,13 @@ a:active {
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 
-.fuzzysugs a {
+.fuzzysugslink {
     display: block;
     margin: 0px auto;
     padding: 0.3rem;
     text-decoration: none;
     text-align: left;
-}
-
-.fuzzysugs a:hover {
-	background-color: #ddd;
-	cursor: pointer;
+    cursor: pointer;
 }
 
 </style>
@@ -487,13 +484,26 @@ async function DoFuzzyMatching(x)
 	    a.innerHTML = res[i2]+"<span style='font-weight: bold;float:right;margin-left: 0.8rem;'> S."+i+"</span>";
 	    a.page = i;
 	    a.word = x;
+	    a.result = results-1;
 	    a.tabIndex = 0;
+	    a.classList.add("fuzzysugslink");
 	    a.onclick = function(){
 		let page = document.getElementById("uniqueocrpage"+this.page);
 		page.innerHTML = page.innerHTML.replace(new RegExp('('+this.word+')','gi'),'<mark>$1</mark>');
 		page.scrollIntoView();
 		document.getElementById("fuzzysuggestions").style.visibility = 'hidden';
 	    }
+
+	    a.onmouseover = function() {
+		    let sugg = document.getElementById("fuzzysuggestions");
+		    let lnks = document.getElementsByClassName("fuzzysugslink");
+		    let value = sugg.selec;
+		    if(value!=undefined)
+			lnks[value].style.background = "";
+		    a.style.background = "#ddd";
+		    sugg.selec = a.result;
+	    }
+
 	    suggestions.appendChild(a);
 	    if(results>9)
 	    {
@@ -513,10 +523,56 @@ function doCompleteNewSearch()
 
 function init() {
 	    document.getElementById("srchbox").innerHTML = getParameterByName('query');
-	    document.getElementById("srchbox").addEventListener("input",function(event){
-			DoFuzzyMatching(document.getElementById("srchbox").value);
+	    document.getElementById("srchbox").addEventListener("keydown",function(event){
+			let x = document.getElementById("srchbox").value;
+			let k = document.getElementById("fuzzysuggestions").selec;
+			if(k==undefined)
+			    k = -1;
+
+			if(event.key == "Enter")
+			{
+			    if(k!=-1)
+			    {
+				let lst = document.getElementsByClassName("fuzzysugslink");
+				lst[k].click();
+				return;
+			    }
+			    doCompleteNewSearch();
+			    return;
+			}
+			if(event.key=="Backspace")
+			{
+			    if(x.length==1)
+			    {
+				document.getElementById("fuzzysuggestions").style.visibility = 'hidden';
+				return;
+			    }
+			    DoFuzzyMatching(x.substr(0,x.length-1));
+			    return;
+			}
+			if(event.key=="ArrowUp" || event.key=="ArrowDown")
+			{
+			    let lst = document.getElementsByClassName("fuzzysugslink");
+			    if(k!=-1)
+				lst[k].style.background = "";
+			    if(event.key=="ArrowUp")
+			    {
+				k-=1;
+				if(k < 0)
+				    k = lst.length-1;
+			    }
+			    else
+				k+=1;
+			    k = k%lst.length;
+			    lst[k].style.background = "#ddd";
+			    event.preventDefault();
+			    document.getElementById("fuzzysuggestions").selec = k;
+			    return;
+			}
+			DoFuzzyMatching(document.getElementById("srchbox").value+event.key);
+			document.getElementById("fuzzysuggestions").selec = undefined;
 		});
-    document.getElementById('searchboxstuff').addEventListener("focusout", function(event){if(event.relatedTarget)event.relatedTarget.click();console.log(event.relatedTarget);document.getElementById("fuzzysuggestions").style.visibility="hidden";});
+    document.getElementById('searchboxstuff').addEventListener("focusout", function(event){if(event.relatedTarget)event.relatedTarget.click();console.log(event.relatedTarget);document.getElementById("fuzzysuggestions").style.visibility="hidden";document.getElementById("fuzzysuggestions").selec = undefined;});
     
     let throttle_reader;
     document.getElementById("thepagereader").onscroll = function() {
@@ -683,7 +739,8 @@ function init() {
 			thpage.innerHTML=thpage.innerHTML.replace(new RegExp('(\\b'+searchResults.pages[i].word.replace(/[-[\]{}()*+?.,\\^$|#\s]/g, '\\$&')+'\\b)','gi'),'<mark>$1</mark>');
 		  }
 		}
-		document.getElementsByClassName("coollnklist")[0].click();
+		if(location.hash=="")
+		    document.getElementsByClassName("coollnklist")[0].click();
 	});
 							      }}, function() {
 		document.getElementById("linklst").innerHTML = "Could not load hit list :(";
@@ -750,16 +807,9 @@ function SelectHit(direction)
 		return;
 	    }
 	}
-	integer = 1000000;
-	for(let i = lnks.length-1; i > -1; i--)
-	{
-	    if(parseInt(lnks[i].dataset.page) < integer)
-	    {
-		lnks[i].click();
-		return;
-	    }
-	}
-
+	//We are at or before the first hit, so jump to the last hit
+	lnks[lnks.length-1].click();
+	return;
     }
     else
     {
@@ -771,16 +821,8 @@ function SelectHit(direction)
 		return;
 	    }
 	}
-
-	integer = -1;
-	for(let i = 0; i < lnks.length; i++)
-	{
-	    if(parseInt(lnks[i].dataset.page) > integer)
-	    {
-		lnks[i].click();
-		return;
-	    }
-	}
+	//We are at the last hit so jump to the first one
+	lnks[0].click();
     }
 }
 
